cleanup: move account create to domain
