# payment-app/src/main/java/com/eaglesoar/paymentapplication/controller/AccountMapper.java
@@ -1,15 +1,0 @@
-package com.eaglesoar.paymentapplication.controller;
-
-import com.eaglesoar.paymentapplication.repository.AccountEntity;
-import com.eaglesoar.paymentapplication.v1.resource.AccountResource;
-import org.mapstruct.Mapper;
-
-import java.util.List;
-
-@Mapper(componentModel = "spring")
-public interface AccountMapper {
-
-    AccountResource toResource(AccountEntity entity);
-
-    List<AccountResource> toResource(List<AccountEntity> entity);
-}
