# payment-domain/src/main/java/com/eaglesoar/payment/model/Payment.java
@@ -1,64 +1,0 @@
-package com.eaglesoar.payment.model;
-
-import lombok.Data;
-
-import java.math.BigDecimal;
-
-//@Data
-public class Payment {
-
-    private Long id;
-    private String debtorAccountNumber;
-    private String creditorAccountNumber;
-    private BigDecimal amount;
-    private String currency;
-    private PaymentStatus status;
-
-    public Long getId() {
-        return id;
-    }
-
-    public void setId(Long id) {
-        this.id = id;
-    }
-
-    public String getDebtorAccountNumber() {
-        return debtorAccountNumber;
-    }
-
-    public void setDebtorAccountNumber(String debtorAccountNumber) {
-        this.debtorAccountNumber = debtorAccountNumber;
-    }
-
-    public String getCreditorAccountNumber() {
-        return creditorAccountNumber;
-    }
-
-    public void setCreditorAccountNumber(String creditorAccountNumber) {
-        this.creditorAccountNumber = creditorAccountNumber;
-    }
-
-    public BigDecimal getAmount() {
-        return amount;
-    }
-
-    public void setAmount(BigDecimal amount) {
-        this.amount = amount;
-    }
-
-    public String getCurrency() {
-        return currency;
-    }
-
-    public void setCurrency(String currency) {
-        this.currency = currency;
-    }
-
-    public PaymentStatus getStatus() {
-        return status;
-    }
-
-    public void setStatus(PaymentStatus status) {
-        this.status = status;
-    }
-}
